# RVOS

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.sh
Startup/: _os_start.ld  os_start.S  qemu-virt_rv.ld
asm/: CMakeLists.txt
cmake/Modules/: CustomTarget.cmake  FindClangFormat.cmake  FindClangTidy.cmake  ToolsChainConf.cmake
docs/: TODO.MD
inc/Arch/CSR/: CSRManager.hh
inc/Arch/Trap/: Trap.hh
inc/Common/: Type.hh
inc/Drivers/: Peripheral.hh  Uart.hh
inc/HAL/Bus/: IBus.hh
inc/HAL/Device/: DevHandle.hpp  DevManager.hh  DeviceCRTP.hpp  IBlock.hh  IChar.hh  IDevice.hh  Peripheral.hh
inc/HAL/Drivers/Serial/: ISerial.hh  UartConfig.hh  ns16550A.hh
inc/HAL/Drivers/Serial/ns16550A/: Uart.hh
inc/HAL/MMIO/: MMIO.hpp
inc/Kernel/: Kernel.hh
inc/Platform/: MemLayout.hh
inc/Util/: ISingleton.hpp
inc/Util/Concepts/: BusCep.hh  DeviceCep.hh
lib/: CMakeLists.txt
lib/ins/: CMakeLists.txt
lib/ins/Logger/: CMakeLists.txt  Logger.cc  Logger.hh
lib/ins/inc/Core/: IBaseInstType.hh  IType.hh  InstType.hh  InstTypeFactory.hh  Instruction.hh  RType.hh
lib/ins/inc/Gui/: AsmMnemonicWidget.hh  BinaryFieldWidget.hh  InstCommST.hh  InstFormatUI.hh  RISCVApplication.hh  RISCVInstructionWindow.hh
lib/ins/inc/ISA/: InstFormat.hh  Regs.hpp
lib/ins/inc/Log/: Logger.hpp
lib/ins/inc/Util/: Alias.hh  BiLookupTable.hpp
lib/ins/src/Core/: IBaseInstType.cc  IType.cc  InstType.cc  InstTypeFactory.cc  Instruction.cc  RType.cc
lib/ins/src/Gui/: AsmMnemonicWidget.cc  BinaryFieldWidget.cc  InstCommST.cc  InstFormatUI.cc  Main.cc  RISCVApplication.cc  RISCVInstructionWindow.cc
lib/ins/src/ISA/: Regs.cc
lib/ins/tests/: INST.cc
lib/os/: CMakeLists.txt
scripts/shell/: qemu_debug.sh  qemu_run.sh  qemu_run_tst.sh
src/: Kernel.cc
src/Arch/: CMakeLists.txt
src/Arch/Boot/: os_start.S
src/Arch/CSR/: CSRManager.cc
src/Arch/Trap/: Trap.cc  trap_entry.S
src/Drivers/: Uart.cc
src/HAL/: CMakeLists.txt
src/HAL/Device/: DevManager.cc  Peripheral.cc
src/HAL/Drivers/Serial/: ns16550A.cc
src/HAL/Drivers/Serial/ns16550A/: Uart.cc
src/Kernel/: CMakeLists.txt  Kernel.cc
src/Kernel/Init/: init.cc
src/Lib/: syscalls.cc
src/ins/: CMakeLists.txt  main.c
src/ins/asm/: add.s
src/os/: CMakeLists.txt
tests/: CMakeLists.txt  hw.c  hw.cc  uart.cc
tests/arch/trap/: CMakeLists.txt  Trap.cc  Trap.hh  main.cc
tests/cmake/: RISCV_XLEN.cmake
tests/hal/: CMakeLists.txt
tests/hal/drv/: uart0.cc
tests/inc/: Checks.hpp
tests/picolibc/: CMakeLists.txt  hw.cc
